atualização do readme com as novas mudanças, correção mensagem de erro de limite da api, adição de dependências ao requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 crewai
+crewai[tools]
+qdrant-client
 python-dotenv
 pyyaml
 google-generativeai
-langchain-google-genai  
+langchain-google-genai
+langchain-groq
+groq
+langchain-openai
+openai
+langchain-cohere
+cohere
+litellm
