lgpd crew working perfectly. Just running 2 times, on commit and then on push

--- a/codewise_lib/config/tasks.yaml
+++ b/codewise_lib/config/tasks.yaml
@@ -59,5 +59,5 @@ lgpd_judging:
     Com base nas leis LGPD e no relatório da analise da documentação,
     determine se o provedor da api key está respeitando ou não as leis LGPD e justifique o julgamento apontando as provas, por meio de um relatório, onde a primeira linha **exatamente na linha 1** do arquivo é a resposta antecipada (sim ou não).
   expected_output: >
-    Documento status_lgpd.md com as provas ou artigos utilizados para determinar a decisão tomada.
+    Documento julgamento_lgpd.md com as provas ou artigos utilizados para determinar a decisão tomada.
   agent: lgpd_judge
