--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ qdrant-client
 python-dotenv
 pyyaml
 google-generativeai
-langchain-google-genai
+google-genai
 langchain-groq
 groq
 langchain-openai
