--- a/codewise_lib/config/tasks.yaml
+++ b/codewise_lib/config/tasks.yaml
@@ -59,7 +59,7 @@ lgpd_judging:
   description: >
     Com base nas leis LGPD e no relatório da analise da documentação,
     determine se o provedor da api key está respeitando ou não as leis LGPD e justifique o julgamento apontando as provas, por meio de um relatório, onde a primeira linha **exatamente na linha 1** do arquivo é a resposta antecipada (sim ou não).
-    Lembre-se de usar a ferramenta para buscar as leis LGPD do site oficial (gov.br).
+    Lembre-se de usar a ferramenta para buscar as leis LGPD do site oficial (gov.br). Além disso, coloque a conclusão sempre no final do arquivo.
   expected_output: >
     Documento julgamento_lgpd.md com as provas ou artigos utilizados para determinar a decisão tomada.
   agent: lgpd_judge
